# nodefy-backend

backend/: app.py  list_structure.py  network.py  pyproject.toml  queue_structure.py  teste.py  user.py
frontend/: package.json
frontend/src/: App.jsx
frontend/src/pages/: HomePage.jsx
frontend/src/pages/components/: ImageSection.jsx  MainSection.jsx  Navbar.jsx  RegistrationForm.jsx
untitled/: package.json
