[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Renan N. Borges <renan.n.borges@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
psycopg2 = "^2.9.9"
psycopg = "^3.1.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
